--- a/index.html
+++ b/index.html
@@ -28,37 +28,89 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+          <p>Module focus on forcing some python conventions to the programm. Its can be used to make your programm better.
+Here we are using metaclasses to change the overall properties of a class</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<div class="highlight highlight-shell"><pre>pip install conventions</pre></div>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="current-features" class="anchor" href="#current-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Features</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>Automatically ad getter and setter </li>
+<li>Convert function name to lower_case (seprated by _)</li>
+<li>Convert variable name to lower_case (seprated by _)</li>
+<li>Convert variable starting with const_ to UPPERCASE</li>
+<li>Convert class name to form CapitalizedWords example(MyClassName)</li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Add following line to top of your file</p>
+
+<div class="highlight highlight-shell"><pre>from conventions.conventions import __metaclass__</pre></div>
+
+<p>For debugging</p>
+
+<div class="highlight highlight-shell"><pre>from conventions.conventions import __metaclass__
+__metaclass__.debug = True</pre></div>
+
+<h3>
+<a id="example" class="anchor" href="#example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example</h3>
+
+<div class="highlight highlight-shell"><pre>from conventions.conventions import __metaclass__
+__metaclass__.debug = True
+
+
+class <span class="pl-en">MyCLass_newDefine</span>():
+    myVar = 5
+    COnsT_DIV = <span class="pl-s1"><span class="pl-pds">'</span>ADDD<span class="pl-pds">'</span></span>
+    MULTIPLY = <span class="pl-s1"><span class="pl-pds">'</span>ssss<span class="pl-pds">'</span></span>
+    MyVARIBALE = <span class="pl-s1"><span class="pl-pds">'</span>sss<span class="pl-pds">'</span></span>
+
+    def __init__(self):
+        self.mynextvariable = 4
+
+    def add_this_FUNCTION(self):
+        print <span class="pl-s1"><span class="pl-pds">'</span>add_this_FUNCTION called<span class="pl-pds">'</span></span>
+
+    def addNewFunction(self):
+        print <span class="pl-s1"><span class="pl-pds">'</span>addNewFunction called<span class="pl-pds">'</span></span>
+
+print MyCLass_newDefine.__dict__
+obj = <span class="pl-en">MyCLass_newDefine</span>()
+obj.mynextvariable = 5
+<span class="pl-c">#print obj.myvar                     # Gives Error</span>
+print <span class="pl-en">obj.get_my_var</span>()
+obj.set_my_var(100)
+print <span class="pl-en">obj.get_my_var</span>()
+<span class="pl-c"># Myclass.get_myvar()</span>
+<span class="pl-en">obj.add_this_function</span>()
+<span class="pl-c">#obj.add_this_FUNCTION()              # Gives error</span></pre></div>
+
+<p>Output</p>
+
+<div class="highlight highlight-shell"><pre><span class="pl-c">################## Modification Block ###################</span>
+class name changed <span class="pl-c"># MyCLass_newDefine -&gt; MyClassNewDefine</span>
+added getter <span class="pl-st">function</span> <span class="pl-en">#</span> get_my_varibale
+added setter <span class="pl-st">function</span> <span class="pl-en">#</span> set_my_varibale
+var/func name changed <span class="pl-c"># MyVARIBALE -&gt; my_varibale</span>
+var/func name changed <span class="pl-c"># MULTIPLY -&gt; MULTIPLY</span>
+var/func name changed <span class="pl-c"># COnsT_DIV -&gt; CONST_DIV</span>
+added getter <span class="pl-st">function</span> <span class="pl-en">#</span> get_my_var
+added setter <span class="pl-st">function</span> <span class="pl-en">#</span> set_my_var
+var/func name changed <span class="pl-c"># myVar -&gt; my_var</span>
+var/func name changed <span class="pl-c"># add_this_FUNCTION -&gt; add_this_function</span>
+var/func name changed <span class="pl-c"># addNewFunction -&gt; add_new_function</span>
+<span class="pl-c">#########################################################</span>
+{<span class="pl-s1"><span class="pl-pds">'</span>get_my_var<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span><span class="pl-st">function</span> <span class="pl-en">get_my_var</span> at 0x024FACF<span class="pl-k">0&gt;</span>, <span class="pl-s1"><span class="pl-pds">'</span>__module__<span class="pl-pds">'</span></span>: <span class="pl-s1"><span class="pl-pds">'</span>__main__<span class="pl-pds">'</span></span>, <span class="pl-s1"><span class="pl-pds">'</span>get_my_varibale<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span><span class="pl-st">function</span> <span class="pl-en">get_my_varibale</span> at 0x024FABF<span class="pl-k">0&gt;</span>, <span class="pl-s1"><span class="pl-pds">'</span>my_var<span class="pl-pds">'</span></span>: 5, <span class="pl-s1"><span class="pl-pds">'</span>add_new_function<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span><span class="pl-st">function</span> <span class="pl-en">addNewFunction</span> at 0x024FAB<span class="pl-k">70&gt;</span>, <span class="pl-s1"><span class="pl-pds">'</span>__doc__<span class="pl-pds">'</span></span>: None, <span class="pl-s1"><span class="pl-pds">'</span>__dict__<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span>attribute <span class="pl-s1"><span class="pl-pds">'</span>__dict__<span class="pl-pds">'</span></span> of <span class="pl-s1"><span class="pl-pds">'</span>MyClassNewDefine<span class="pl-pds">'</span></span> objects<span class="pl-k">&gt;</span>, <span class="pl-s1"><span class="pl-pds">'</span>__weakref__<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span>attribute <span class="pl-s1"><span class="pl-pds">'</span>__weakref__<span class="pl-pds">'</span></span> of <span class="pl-s1"><span class="pl-pds">'</span>MyClassNewDefine<span class="pl-pds">'</span></span> objects<span class="pl-k">&gt;</span>, <span class="pl-s1"><span class="pl-pds">'</span>CONST_DIV<span class="pl-pds">'</span></span>: <span class="pl-s1"><span class="pl-pds">'</span>ADDD<span class="pl-pds">'</span></span>, <span class="pl-s1"><span class="pl-pds">'</span>set_my_var<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span><span class="pl-st">function</span> <span class="pl-en">set_my_var</span> at 0x024FAD<span class="pl-k">30&gt;</span>, <span class="pl-s1"><span class="pl-pds">'</span>MULTIPLY<span class="pl-pds">'</span></span>: <span class="pl-s1"><span class="pl-pds">'</span>ssss<span class="pl-pds">'</span></span>, <span class="pl-s1"><span class="pl-pds">'</span>add_this_function<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span><span class="pl-st">function</span> <span class="pl-en">add_this_FUNCTION</span> at 0x024FAB<span class="pl-k">30&gt;</span>, <span class="pl-s1"><span class="pl-pds">'</span>my_varibale<span class="pl-pds">'</span></span>: <span class="pl-s1"><span class="pl-pds">'</span>sss<span class="pl-pds">'</span></span>, <span class="pl-s1"><span class="pl-pds">'</span>set_my_varibale<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span><span class="pl-st">function</span> <span class="pl-en">set_my_varibale</span> at 0x024FAC<span class="pl-k">30&gt;</span>, <span class="pl-s1"><span class="pl-pds">'</span>__init__<span class="pl-pds">'</span></span>: <span class="pl-k">&lt;</span><span class="pl-st">function</span> <span class="pl-en">__init__</span> at 0x024FAAF<span class="pl-k">0&gt;</span>}
+5
+100
+add_this_FUNCTION called</pre></div>
         </section>
 
         <aside id="sidebar">
