Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Python-conventions</h1>
-        <h2>Module will add coding coventions to the code along with additional function like getter setter</h2>
+        <h2>Add coding conventions to your python code</h2>
         <a href="https://github.com/pankajr141/python-conventions" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -40,7 +40,7 @@ Here we are using metaclasses to change the overall properties of a class</p>
 <a id="current-features" class="anchor" href="#current-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Features</h3>
 
 <ul>
-<li>Automatically ad getter and setter </li>
+<li>Automatically add getter and setter </li>
 <li>Convert function name to lower_case (seprated by _)</li>
 <li>Convert variable name to lower_case (seprated by _)</li>
 <li>Convert variable starting with const_ to UPPERCASE</li>
